#add_subdirectory( rpmsg_test )
#add_subdirectory( sdb_test )
add_subdirectory( sdb_reconnect_test )
#add_subdirectory( blink )
#add_subdirectory( stgenr )
#add_subdirectory( hello_world )
#add_subdirectory( hello_up7 )
#add_subdirectory( embedded_dio )
#add_subdirectory( spi_loopback )
#add_subdirectory( spi_echo )
#add_subdirectory( adapter_pins )
#add_subdirectory( i2c_echo )
#add_subdirectory( uart_echo )
#add_subdirectory( fail_test )
